# sfui

./: Cargo.toml  README.md  TODO.md
examples/demo/: Cargo.toml  debug.sh  index.html  serve.sh
examples/demo/src/: lib.rs
examples/frames/: Cargo.toml  index.html  serve.sh
examples/frames/src/: lib.rs
serve/: Cargo.toml
serve/src/: main.rs
src/: button.rs  card.rs  dice.rs  frame.rs  lib.rs  status.rs  theme.rs
xtask/: Cargo.toml
xtask/src/: main.rs
