[package]
name = "sfui"
version = "0.1.0"
edition = "2021"


[dependencies]
#sauron = { path ="../sauron", features = ["with-measure"]}
sauron = { git = "https://github.com/ivanceras/sauron", branch="reusable-components" features = ["with-measure"]}
log = "0.4"
css-colors = "1" # for using lighten, and darken when calculating theme colors
css-color = "0.1.1" #for parsing hex color into rgb, don't get mix with css-colors with a `s`
wasm-bindgen-futures = "0.4.32"

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlAudioElement",
    "DomRect",
]

[workspace]
members = ["examples/*"]

[[bin]]
name = "demo"
path = "examples/demo"
