[package]
name = "serve"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = { version = "0.6.16", features = ["tokio"] }
axum-extra = "0.8.0"
clap = { version = "4.4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

